Added session duration for the AWS IAM Roles Anywhere profile

--- a/vault-demo-aws-iam-roles-anywhere.ipynb
+++ b/vault-demo-aws-iam-roles-anywhere.ipynb
@@ -369,8 +369,10 @@
     "echo \"Role ARN: $ROLE_ARN\"\n",
     "#echo \"Policy ARN: $POLICY_ARN\"\n",
     "\n",
+    "# Create a IAM Roles Anywhere profile. Note the default for session duration is 1 hour. Min is 900 seconds or 15 minutes.\n",
     "aws rolesanywhere create-profile \\\n",
     "    --name \"OnPremInstanceProfile\" \\\n",
+    "    --duration-seconds 3600 \\\n",
     "    --role-arns $ROLE_ARN \\\n",
     "    --output json > profile.json\n",
     "# Adding this did not work. Added the policy to the role instead.\n",
